--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fluxible-router": "^0.3.0",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
+    "semantics3-node": "0.0.3",
     "serialize-javascript": "^1.0.0",
     "serve-favicon": "^2.1.6"
   },
@@ -45,7 +46,7 @@
     "type": "git",
     "url": "git+https://github.com/nvhienict/peddlertask.git"
   },
-  "author": "",
+  "author": "Hien Nguyen <hien.nguyen@smartdev.vn>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/nvhienict/peddlertask/issues"
